# sql_finetuning

./: .gitignore  .gitmodules  ANALYZE_EXECUTION_EVALUATION_RESULTS.md  ANALYZE_LLM_EVALUATION_RESULTS.md  COMPARE_EVALUATION_APPROACHES.md  EVALUATION_LIBRARY_DESIGN.MD  LANGFUSE_SETUP_INSTRUCTIONS.md  LICENSE  README.md  SETUP_DATABASE_ENVIRONMENT.md  execution_evaluate.py  finetune_unloth_pytorch_312.ipynb  llm_evaluate.py  set_env.sh  test_prompt.txt
.cursor/: rules
.cursor/rules/: da.mdc  ds.mdc  package.mdc  python.mdc
examples/: huggingface_eda.ipynb  run_evaluation_notebook.ipynb  run_evaluation_notebook_refactored.ipynb
llmwatch/: .env.example  README.md  __init__.py  pyproject.toml  pytest.ini
llmwatch/src/sql_eval_lib/: __init__.py  config.py  phase1_impl_feedback.md  plan.txt  plan_dataset.md
llmwatch/src/sql_eval_lib/database_backends/: mysql_backend.py  postgres_backend.py  registry.py  sqlite_backend.py  trino_backend.py  validation.py
llmwatch/src/sql_eval_lib/dataset/: __init__.py  base_dataset.py
llmwatch/src/sql_eval_lib/dataset/langfuse_integration/: __init__.py  dataset_manager.py
llmwatch/src/sql_eval_lib/dataset/loaders/: __init__.py
llmwatch/src/sql_eval_lib/dataset/transformers/: __init__.py  sql_transformer.py
llmwatch/src/sql_eval_lib/evaluation/: __init__.py  base.py  prompts.py
llmwatch/src/sql_eval_lib/evaluation/metrics/: __init__.py  base_metrics.py
llmwatch/src/sql_eval_lib/evaluation/sql/: __init__.py  sql_llm_evaluator.py
llmwatch/src/sql_eval_lib/langfuse/: __init__.py  deployment.py  manager.py
llmwatch/src/sql_eval_lib/models/: __init__.py  adapters.py  interface.py
llmwatch/src/sql_eval_lib/utils/: __init__.py  helpers.py
llmwatch/tests/: conftest.py
llmwatch/tests/dataset/: test_models.py
llmwatch/tests/dataset/integration/: conftest.py
llmwatch/tests/evaluation/: test_base_framework.py
scripts/: setup_project.sh
sql_evaluation_library/: PHASE_1_IMPROVEMENTS_AND_PHASE_2_PLAN.md  README.md  __init__.py  pyproject.toml
sql_evaluation_library/scripts/: prepare_dataset.py  setup_project.sh
sql_evaluation_library/src/sql_eval_lib/: __init__.py  refactor_evaluation_module.md
sql_evaluation_library/src/sql_eval_lib/database_backends/: __init__.py  base.py  factory.py
sql_evaluation_library/src/sql_eval_lib/dataset/: interfaces.py  models.py
sql_evaluation_library/src/sql_eval_lib/dataset/langfuse_integration/: dataset_manager.py
sql_evaluation_library/src/sql_eval_lib/dataset/loaders/: huggingface_loader.py
sql_evaluation_library/src/sql_eval_lib/evaluation/: __init__.py  exec_evaluator.py  llm_evaluator.py  orchestrator.py
sql_evaluation_library/src/sql_eval_lib/evaluation/metrics/: sql_metrics.py
sql_evaluation_library/src/sql_eval_lib/evaluation/sql/: sql_exec_evaluator.py
sql_evaluation_library/src/sql_eval_lib/langfuse/: __init__.py  manager.py  monitoring.py  project_manager.py  validation.py
sql_evaluation_library/src/sql_eval_lib/models/: __init__.py  adapters.py  generation.py  health_check.py  interface.py  validation.py
sql_evaluation_library/src/sql_eval_lib/utils/: __init__.py  error_handling.py  helpers.py
sql_evaluation_library/tests/: __init__.py  conftest.py
sql_evaluation_library/tests/dataset/: test_loaders.py  test_models.py  test_transformers.py
sql_evaluation_library/tests/dataset/integration/: conftest.py  test_end_to_end.py
sql_evaluation_library/tests/evaluation/metrics/: test_sql_metrics.py
